@@ -2,6 +2,7 @@
 	
 	* using CDI library version 1.2.2
 	* import_cmsaf: add support for monthly mean diurnal variation
+	* remapcon: add support for second order remapping (use env REMAP_ORDER=2)
 	* intlevel: bug fix for datasets with missing values
 	* Version 1.2.2 released
 
